# shamir_app_core

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: migrating-legacy-scripts.md
examples/: legacy_program_skeleton.py
src/shamir_app_core/: __init__.py  app_logging.py  console.py  context.py  db.py  email.py  errors.py  event_log.py
src/shamir_app_core/compat/: __init__.py  mmm.py
src/shamir_app_core/config/: __init__.py  provider.py
src/shamir_app_core/credentials/: __init__.py  codec.py
src/shamir_app_core/runtime/: __init__.py  identity.py  paths.py
tests/: test_app_logging.py  test_config_provider.py  test_console.py  test_credentials_codec.py  test_db.py  test_email.py  test_errors.py  test_event_log.py  test_graph_email.py  test_legacy_application_context.py  test_legacy_program_skeleton.py  test_minimal_legacy_script_adoption.py  test_mmm_compat.py  test_runtime_identity.py  test_runtime_paths.py
tests/fixtures/: legacy_sample.ini
