[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shamir-app-core"
version = "0.1.0"
description = "Core compatibility helpers for the Shamir legacy Python applications."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Shamir UK" },
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
